fixed z-index problem

--- a/app/components/common-background/common-background.scss
+++ b/app/components/common-background/common-background.scss
@@ -18,7 +18,6 @@
 	left: 0px;
 	min-height: 100%;
 	min-width: 100%;
-	z-index: -100;
 	overflow: scroll;
 	background: #ffffff; /* Old browsers */
 	background: #ffffff; /* Old browsers */
